--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+body{
+	background-color: rgb(204, 204, 204);
+}
+h1,h2{
+	text-align:center;
+}
+.playlist{
+	margin:15px;
+	border:1px solid black;
+	background-color:white;
+	border-radius:6px;
+}
+ul{
+	list-style-type: none;
+	text-decoration-line: none;
+	padding:10px;
+}
+.player_one,.player_two{
+	width:100%;
+}
+.playing{
+	margin-left:50px;
+	margin-right:50px;
+	border:1px solid black;
+	background-color:white;
+	border-radius:6px;
+	padding:10px 10px;
+}
